--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 113,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -57,7 +57,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "import tabulate as tabulate"
+        "from tabulate import tabulate\n"
       ]
     },
     {
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -257,7 +257,7 @@
               "4  1022.3 -19.4   0.0    N   2.1  Dingling  "
             ]
           },
-          "execution_count": 41,
+          "execution_count": 114,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -269,7 +269,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -446,7 +446,7 @@
               "4  1027.1 -24.5   0.0  NNW   3.2  Dongsi  "
             ]
           },
-          "execution_count": 42,
+          "execution_count": 115,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -635,7 +635,7 @@
               "4  1025.2 -19.5   0.0    N   2.0  Guanyuan  "
             ]
           },
-          "execution_count": 43,
+          "execution_count": 116,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -647,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 117,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -824,7 +824,7 @@
               "4  1023.0 -21.4   0.0  WNW   3.6  Gucheng  "
             ]
           },
-          "execution_count": 44,
+          "execution_count": 117,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -836,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 118,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1013,7 +1013,7 @@
               "4  1022.1 -22.7   0.0  NNW   2.2  Huairou  "
             ]
           },
-          "execution_count": 45,
+          "execution_count": 118,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1025,7 +1025,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 119,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1202,7 +1202,7 @@
               "4  1027.1 -24.5   0.0  NNW   3.2  Nongzhanguan  "
             ]
           },
-          "execution_count": 46,
+          "execution_count": 119,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1214,7 +1214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 120,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1391,7 +1391,7 @@
               "4  1027.7 -22.9   0.0  NW   4.5  Shunyi  "
             ]
           },
-          "execution_count": 47,
+          "execution_count": 120,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1403,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1580,7 +1580,7 @@
               "4  1027.1 -24.5   0.0  NNW   3.2  Tiantan  "
             ]
           },
-          "execution_count": 48,
+          "execution_count": 121,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1592,7 +1592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 122,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1769,7 +1769,7 @@
               "4  1025.2 -19.5   0.0    N   2.0  Wanliu  "
             ]
           },
-          "execution_count": 49,
+          "execution_count": 122,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1781,7 +1781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1958,7 +1958,7 @@
               "4  1024.1 -21.7   0.0  WNW   2.5  Wanshouxigong  "
             ]
           },
-          "execution_count": 50,
+          "execution_count": 123,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1970,7 +1970,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2147,7 +2147,7 @@
               "4  1022.3 -19.4   0.0    N   2.1  Changping  "
             ]
           },
-          "execution_count": 51,
+          "execution_count": 124,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2159,7 +2159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2336,7 +2336,7 @@
               "4  1025.2 -19.5   0.0    N   2.0  Aotizhongxin  "
             ]
           },
-          "execution_count": 52,
+          "execution_count": 125,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2381,7 +2381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3595,7 +3595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3728,7 +3728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 128,
       "metadata": {
         "id": "e9CQCZjk8DC2"
       },
@@ -3739,7 +3739,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 129,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3762,7 +3762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3826,7 +3826,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 131,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3890,7 +3890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 132,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3938,7 +3938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [
         {
@@ -4008,23 +4008,30 @@
         }
       ],
       "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Menghitung jumlah hari hujan per stasiun\n",
         "rainy_days = df[df['RAIN'] > 0].groupby('station')['RAIN'].count().reset_index()\n",
         "rainy_days.columns = ['station', 'rainy_days']\n",
         "\n",
+        "# Menghitung rata-rata suhu per stasiun\n",
         "avg_temp = df.groupby('station')['TEMP'].mean().reset_index()\n",
         "avg_temp.columns = ['station', 'avg_temp']\n",
         "\n",
+        "# Menghitung rata-rata konsentrasi CO per stasiun\n",
         "avg_co = df.groupby('station')['CO'].mean().reset_index()\n",
         "avg_co.columns = ['station', 'avg_co']\n",
         "\n",
+        "# Menghitung rata-rata konsentrasi PM2.5 per stasiun\n",
         "avg_pm25 = df.groupby('station')['PM2.5'].mean().reset_index()\n",
         "avg_pm25.columns = ['station', 'avg_pm25']\n",
         "\n",
+        "# Menggabungkan semua hasil\n",
         "merged_df = rainy_days.merge(avg_temp, on='station')\\\n",
         "                      .merge(avg_co, on='station')\\\n",
         "                      .merge(avg_pm25, on='station')\n",
         "\n",
-        "\n",
+        "# Sorting berdasarkan masing-masing kategori\n",
         "sorted_rainy = merged_df.sort_values(by='rainy_days', ascending=False)\n",
         "sorted_temp = merged_df.sort_values(by='avg_temp', ascending=False)\n",
         "sorted_co = merged_df.sort_values(by='avg_co', ascending=False)\n",
@@ -4064,7 +4071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 134,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4138,7 +4145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4178,7 +4185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
@@ -4233,7 +4240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 137,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4325,7 +4332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 138,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4448,7 +4455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 139,
       "metadata": {
         "id": "9yHhzHVqbxYC"
       },
